<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/user_icon_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/user_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:background="@drawable/purple_circle"
            android:text="A"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:visibility="visible" />

    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_icon_container"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/username">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@drawable/edit_text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_text_input_layout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_email_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@drawable/edit_text_color" />

    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:id="@+id/bottom_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:enabled="false"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:text="@string/save"
            android:visibility="visible" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/save_button"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:text="@string/logout"
            android:visibility="visible" />

    </RelativeLayout>

</RelativeLayout>
