<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.home.HomeFragment">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/unlock_edition_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/pdf_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_pdf_document_black_24dp"
                android:visibility="visible"
                android:layout_alignParentLeft="true"                />

            <Button
                android:id="@+id/select_pdf_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:text="@string/select_pdf"
                android:scaleType="fitCenter"
                android:visibility="visible"
                android:enabled="true"
                android:layout_toRightOf="@id/pdf_icon"/>


            <ImageView
                android:id="@+id/unlock_edition_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_lock_outline_closed_black_24dp"
                android:visibility="visible"
                android:layout_toLeftOf="@+id/unlock_edition_switch"
                />

            <Switch
                android:id="@+id/unlock_edition_switch"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                />

        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/publication_name_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/unlock_edition_container"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/name">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/publication_name_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@drawable/edit_text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/publication_authors_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/publication_name_text_input_layout"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/authors">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/publication_authors_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@drawable/edit_text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/publication_description_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/publication_authors_text_input_layout"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/publication_description_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="4"
                android:textColor="@drawable/edit_text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/publication_tags_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/publication_description_text_input_layout"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/tags">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/publication_tags_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@drawable/edit_text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/bottom_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/publication_tags_text_input_layout"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:text="@string/save"
                android:scaleType="fitCenter"
                android:visibility="visible"
                android:enabled="false"/>

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>